--- a/poo-library-app-web/src/main/webapp/index.html
+++ b/poo-library-app-web/src/main/webapp/index.html
@@ -9,6 +9,11 @@
 
   <title>:: Sistema de Gerenciamento de Bibliotecas ::</title>
 
+  <link href="assets/bootswatch/flatly/bootstrap.min.css" rel="stylesheet" type="text/css">
+  <link href="assets/angular-loading-bar/build/loading-bar.min.css" rel="stylesheet" type="text/css" media="all">
+
+  <link href="styles/main.css" rel="stylesheet" type="text/css">
+
 </head>
 <body>
   <div class="container">
@@ -81,7 +86,7 @@
     </nav>
     <div ng-view>
     <div style="margin: auto; width: 20em; text-align: center; padding-top: 10%;">
-      <progress style="width: 16em; height: 0.4em;" max="100" value="0"></progress>
+      <progress class="main-progress" style="width: 16em; height: 0.4em;" max="100" value="0"></progress>
       <strong>Carregando...</strong>
     </div>
     </div>
@@ -89,86 +94,67 @@
 
   <script id="jquery" src="assets/jquery/dist/jquery.min.js" type="text/javascript" defer></script>
 
-  <script class="queued" data-src="assets/angular/angular.min.js" type="text/javascript"></script>
-  <script class="queued" data-src="assets/angular-route/angular-route.min.js" type="text/javascript"></script>
-  <script class="queued" data-src="assets/angular-resource/angular-resource.min.js" type="text/javascript"></script>
-  
-  <script class="queued" data-src="assets/angular-animate/angular-animate.min.js" type="text/javascript"></script>
+  <script class="queued bulk-1" data-src="assets/angular/angular.min.js" type="text/javascript"></script>
 
-  <script class="queued" data-src="assets/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
+  <script class="queued bulk-2" data-src="assets/angular-route/angular-route.min.js" type="text/javascript"></script>
+  <script class="queued bulk-2" data-src="assets/angular-resource/angular-resource.min.js" type="text/javascript"></script>
+  <script class="queued bulk-2" data-src="assets/angular-animate/angular-animate.min.js" type="text/javascript"></script>
+  <script class="queued bulk-2" data-src="assets/angular-loading-bar/build/loading-bar.min.js" type="text/javascript"></script>
 
-  <script class="queued" data-src="assets/jquery.inputmask/dist/jquery.inputmask.bundle.min.js" type="text/javascript"></script>
+  <script class="queued bulk-1" data-src="assets/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
 
-  <script class="queued" data-src="assets/angular-loading-bar/build/loading-bar.min.js" type="text/javascript"></script>
+  <script class="queued bulk-1" data-src="assets/jquery.inputmask/dist/jquery.inputmask.bundle.min.js" type="text/javascript"></script>
 
-  <script class="queued" data-src="scripts/biblioteca.module.js" type="text/javascript"></script>
-  <script class="queued" data-src="scripts/crud.controller.js" type="text/javascript"></script>
+  <script class="queued bulk-3" data-src="scripts/biblioteca.module.js" type="text/javascript"></script>
+  <script class="queued bulk-4" data-src="scripts/crud.controller.js" type="text/javascript"></script>
 
-  <script class="queued" data-src="scripts/admin/controller.js" type="text/javascript"></script>
-  <script class="queued" data-src="scripts/admin/usuario.controller.js" type="text/javascript"></script>
-  <script class="queued" data-src="scripts/admin/biblioteca.controller.js" type="text/javascript"></script>
+  <script class="queued bulk-5" data-src="scripts/admin/controller.js" type="text/javascript"></script>
+  <script class="queued bulk-5" data-src="scripts/admin/usuario.controller.js" type="text/javascript"></script>
+  <script class="queued bulk-5" data-src="scripts/admin/biblioteca.controller.js" type="text/javascript"></script>
 
-  <script class="queued" data-src="scripts/admin/acervo.controller.js" type="text/javascript"></script>
+  <script class="queued bulk-5" data-src="scripts/admin/acervo.controller.js" type="text/javascript"></script>
 
   <script>
-    function queued(e,n,r){var t=[],o=$.Deferred().done(function(){t.shift()});
-    return $(e).each(function(){var e=$(this);t.push($.Deferred().done(function(){
-    e.load(function(){t.length>0&&(o.notify(),t.shift().resolve())}),e.prop("src",
-    e.data("src"))}))}),t.push(o),t.shift().resolve(),o}
+    (function() {
 
-    document.getElementById('jquery').addEventListener('load', bootstrap);
+      function queued(e,n,r){var t=[],o=$.Deferred().done(function(){t.shift()});
+      return $(e).each(function(){var e=$(this);t.push($.Deferred().done(function(){
+      e.load(function(){t.length>0&&(o.notify(),t.shift().resolve())}),e.prop("src",
+      e.data("src"))}))}),t.push(o),t.shift().resolve(),o}function bulk(e){var n=
+      $.Deferred(),r=$(e),t=r.length;return r.each(function(){queued(this).done(
+      function(){t--,n.notify(),0==t&&n.resolve()})}),n.promise()}
 
-    function bootstrap() {
+      document.getElementById('jquery').addEventListener('load', bootstrap);
 
-      var APP_NAME = 'biblioteca';
+      function bootstrap() {
+        var APP_NAME = 'biblioteca';
 
-      var progress = $('progress');
-      var scripts = $('script.queued');
-      var total = scripts.length;
+        var progress = $('progress.main-progress');
+        var scripts = $('script.queued');
+        var total = scripts.length;
 
-      progress.prop('max', total);
+        progress.prop('max', total);
 
-      queued(scripts).progress(function() {
+        var p = function() {
+          progress.val(progress.val() + 1);
+        };
 
-        progress.val(progress.val() + 1);
+        var done = function() {
+          $(document).prop('ng-app', APP_NAME);
+          angular.bootstrap(document, [APP_NAME]);
+        };
 
-      }).done(function() {
-
-        // console.log('End of queue!');
-
-        $(document).prop('ng-app', APP_NAME);
-
-        angular.bootstrap(document, [APP_NAME]);
-
-        // console.log('End of angular bootstrap');
-      });
-    }
-  </script>
-
-  <!-- 
-    tirado de https://developers.google.com/speed/docs/insights/OptimizeCSSDelivery#example
-   -->
-  <noscript id="deferred-styles">
-    <link href="assets/bootswatch/flatly/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="assets/angular-loading-bar/build/loading-bar.min.css" type="text/css" rel="stylesheet" media="all">
-    <link href="styles/main.css" rel="stylesheet" type="text/css">
-  </noscript>
-  <script>
-    var loadDeferredStyles = function() {
-      var addStylesNode = document.getElementById("deferred-styles");
-      var replacement = document.createElement("div");
-      replacement.innerHTML = addStylesNode.textContent;
-      document.body.appendChild(replacement);
-      addStylesNode.parentElement.removeChild(addStylesNode);
-    };
-
-    var raf = requestAnimationFrame || mozRequestAnimationFrame ||
-        webkitRequestAnimationFrame || msRequestAnimationFrame;
-
-    if (raf)
-      raf(function() { window.setTimeout(loadDeferredStyles, 0); });
-    else
-      window.addEventListener('load', loadDeferredStyles);
+        bulk('.bulk-1').progress(p).done(function() {
+          bulk('.bulk-2').progress(p).done(function() {
+            bulk('.bulk-3').progress(p).done(function() {
+              bulk('.bulk-4').progress(p).done(function() {
+                bulk('.bulk-5').progress(p).done(done);
+              });
+            });
+          });
+        });
+      }
+    })();
   </script>
 </body>
 </html>
