--- a/poo-library-app-web/src/main/webapp/admin/biblioteca/acervo/edit.html
+++ b/poo-library-app-web/src/main/webapp/admin/biblioteca/acervo/edit.html
@@ -59,6 +59,13 @@
           </div>
         </div>
         <div class="form-group">
+          <div class="col-lg-12">
+            <label class="control-label">
+              Preço Locação</label>
+            <input class="form-control" type="text" ng-model="data.precoLocacao" required>
+          </div>
+        </div>
+        <div class="form-group">
           <div class="col-lg-12 modal-footer">
             <a class="btn btn-sm btn-default" ng-click="cancel('/admin/biblioteca/' + params.bibliotecaId + '/acervo')">
               <span class="glyphicon glyphicon-chevron-left"></span> Voltar
