--- a/poo-library-app-web/src/main/webapp/admin/biblioteca/edit.html
+++ b/poo-library-app-web/src/main/webapp/admin/biblioteca/edit.html
@@ -44,7 +44,7 @@
           <div class="col-lg-12">
             <label class="control-label">
               Multa</label>
-            <input class="form-control" type="number" min="0" step="0.01" ng-model="data.multaDiaria" required>
+            <input class="form-control" type="text" ng-model="data.multaDiaria" required>
           </div>
         </div>
         <div class="form-group">
