--- a/poo-library-app-web/src/main/webapp/index.html
+++ b/poo-library-app-web/src/main/webapp/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <div class="container" ng-controller="MainCtrlr">
-    <div ng-include="menu"></div>
+    <div ng-include="menu" ng-show="user != null"></div>
     <div ng-view>
       <div style="margin: auto; width: 20em; text-align: center; padding-top: 10%;">
         <progress class="main-progress" style="width: 16em; height: 0.4em;" max="100" value="0"></progress>
@@ -27,30 +27,29 @@
   </div>
 
   <script id="jquery" src="assets/jquery/dist/jquery.min.js" type="text/javascript" defer></script>
+  <script src="scripts/main.js" type="text/javascript" defer></script>
 
   <script class="queued bulk-1" data-src="assets/angular/angular.min.js" type="text/javascript"></script>
+  <script class="queued bulk-1" data-src="assets/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
 
   <script class="queued bulk-2" data-src="assets/angular-route/angular-route.min.js" type="text/javascript"></script>
   <script class="queued bulk-2" data-src="assets/angular-resource/angular-resource.min.js" type="text/javascript"></script>
   <script class="queued bulk-2" data-src="assets/angular-animate/angular-animate.min.js" type="text/javascript"></script>
   <script class="queued bulk-2" data-src="assets/angular-loading-bar/build/loading-bar.min.js" type="text/javascript"></script>
 
-  <script class="queued bulk-1" data-src="assets/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
-
-  <script class="queued bulk-1" data-src="assets/jquery.inputmask/dist/jquery.inputmask.bundle.min.js" type="text/javascript"></script>
+  <script class="queued bulk-2" data-src="assets/jquery.inputmask/dist/jquery.inputmask.bundle.min.js" type="text/javascript"></script>
 
   <script class="queued bulk-3" data-src="scripts/biblioteca.module.js" type="text/javascript"></script>
+
   <script class="queued bulk-4" data-src="scripts/crud.controller.js" type="text/javascript"></script>
 
-  <script class="queued bulk-5" data-src="scripts/admin/controller.js" type="text/javascript"></script>
+  <script class="queued bulk-4" data-src="scripts/admin/controller.js" type="text/javascript"></script>
+  <script class="queued bulk-4" data-src="scripts/user/controller.js" type="text/javascript"></script>
+
   <script class="queued bulk-5" data-src="scripts/admin/usuario.controller.js" type="text/javascript"></script>
   <script class="queued bulk-5" data-src="scripts/admin/biblioteca.controller.js" type="text/javascript"></script>
-
   <script class="queued bulk-5" data-src="scripts/admin/acervo.controller.js" type="text/javascript"></script>
 
-  <script class="queued bulk-5" data-src="scripts/user/controller.js" type="text/javascript"></script>
   <script class="queued bulk-5" data-src="scripts/user/acervo.controller.js" type="text/javascript"></script>
-
-  <script src="scripts/main.js" type="text/javascript" defer></script>
 </body>
 </html>
