--- a/poo-library-app-web/src/main/webapp/index.html
+++ b/poo-library-app-web/src/main/webapp/index.html
@@ -52,5 +52,7 @@
   <script class="queued bulk-5" data-src="scripts/admin/acervo.controller.js" type="text/javascript"></script>
 
   <script class="queued bulk-5" data-src="scripts/user/acervo.controller.js" type="text/javascript"></script>
+  <script class="queued bulk-5" data-src="scripts/user/locacao.controller.js" type="text/javascript"></script>
+  <script class="queued bulk-5" data-src="scripts/user/reserva.controller.js" type="text/javascript"></script>
 </body>
 </html>
